manualprocess/yaml/zlzookeeper-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zlzookeeper
  labels:
    app: zlzookeeper
spec:
  serviceName: zk-hs
  replicas: 3
  selector:
    matchLabels:
      app: zlzookeeper
  template:
    metadata:
      labels:
        app: zlzookeeper
    spec:
      serviceAccountName: zlapp-sa
      containers:
        - name: zlzookeeper
          image: 995553364920.dkr.ecr.us-east-1.amazonaws.com/ue1-zlps-ecr-01:zlzookeeper20251219
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
              name: client
            - containerPort: 2888
              name: peer
            - containerPort: 3888
              name: election
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 500Mi
          volumeMounts:
            - name: zlzkdata
              mountPath: /var/ZipLip/DATA/ZooKeeper
            - name: zk-config
              mountPath: /opt/ZipLip/ZLZooKeeper/config/zk.cfg
              subPath: zk.cfg
            - name: zk-config
              mountPath: /opt/ZipLip/ZLZooKeeper/config/zkQuorum.cfg
              subPath: zkQuorum.cfg
      volumes:
        - name: zk-config
          configMap:
            name: zk-config
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: zlzkdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
