manualprocess/yaml/zlsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zlsearch
  labels:
    name: zlsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zlsearch
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zlsearch
    spec:
      serviceAccountName: zlapp-sa
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: zlsearch
          image: zlserver:k8s-20251222
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: zltikatemp
              mountPath: /opt/ZipLip/zlserver/WEB-INF/tmp
            - name: zlsearchlogs
              mountPath: /opt/ZipLip/logs
            - name: zlvault
              mountPath: /var/ZipLip/Vault
            - name: docconvert-config
              mountPath: /opt/ZipLip/zlserver/WEB-INF/config/app/sheet/DocumentConversion.xml
              subPath: DocumentConversion.xml
            - name: zkclient-config
              mountPath: /opt/ZipLip/ZLZooKeeper/config/zkQuorum.cfg
              subPath: zkQuorum.cfg
      volumes:
        - name: zltikatemp
          persistentVolumeClaim:
            claimName: zltikatemp-pvc
        - name: zlsearchlogs
          emptyDir: {}
        - name: zlvault
          persistentVolumeClaim:
            claimName: zlvault-pvc
        - name: docconvert-config
          configMap:
            name: docconvert-config
        - name: zkclient-config
          configMap:
            name: zkclient-config
---
apiVersion: v1
kind: Service
metadata:
  name: zlsearch
  labels:
    app: zlsearch
spec:
  selector:
    app: zlsearch
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
